# weltgewebe

./: .FINAL-STATUS-BOUNDARY.md  .PR-1072-COMPLETION-GUIDE.md  .PR-1072-UPDATED-BODY.txt  .WAITING-FOR-TOKEN.txt  .dockerignore  .editorconfig  .env.example  .env.prod.example  .gitattributes  .gitignore  .hauski-reports  .lychee.toml  .markdownlint.jsonc  .markdownlint.jsonc.orig  .markdownlint.yaml  .pr-1072-final-status.md  .vale.ini  .yamllint  .yamllint.yml  AGENTS.md  AGENTS.md.orig  CLAUDE.md  COMPLETION-STATUS.md  CONTRIBUTING.md  Cargo.toml  FINAL-COMPLETION-RECORD.md  FINAL-RECORD-COMPLETE.md  Justfile  LICENSE  Makefile  PLAN.md  PR-1072-FINAL-COMPLETION-INSTRUCTIONS.md  PR_DRAFT_AUTH_PHASE6_PROOF.md  README.md  SYSTEM_MAP.md  agent-policy.yaml  auth_gh_and_update_pr.sh  benchmark.js  clarify_docs.py  clean_guards.py  (+68 more)
.devcontainer/: Dockerfile.extended  devcontainer-lock.json  devcontainer.json  post-create.sh  postCreate.sh  prepare-ssh-agent-mount.sh  ssh-agent-guard.sh  uid-guard.sh
.gewebe/: code-review-summary.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.wgx/: generated-artifacts.yml  profile.example.yml  profile.yml
apps/api/: Cargo.toml  Dockerfile  PERFORMANCE_RATIONALE.md  README.md  entrypoint.sh
apps/api/migrations/: 20260428000000_create_sessions.up.sql  20260531000001_create_domain_nodes.down.sql  20260531000001_create_domain_nodes.up.sql  20260531000002_create_domain_edges.down.sql  20260531000002_create_domain_edges.up.sql  20260531000003_create_domain_accounts.down.sql  20260531000003_create_domain_accounts.up.sql  20260613000001_domain_accounts_email_normalized_unique.down.sql  20260613000001_domain_accounts_email_normalized_unique.up.sql
apps/api/policies/: limits.yaml
apps/api/src/: config.rs  domain_db.rs  lib.rs  mailer.rs  mailer.rs.bak.20260219T080001Z  mailer.rs.bak.20260219T095122Z  mailer.rs.bak.20260219T100405Z  main.rs  state.rs  test_helpers.rs  utils.rs
apps/api/src/auth/: accounts.rs  challenges.rs  lock.rs  mod.rs  passkeys.rs  rate_limit.rs  role.rs  session.rs  session_db.rs  step_up_tokens.rs  tokens.rs
apps/api/src/middleware/: auth.rs  authz.rs  csrf.rs  mod.rs
apps/api/src/routes/: accounts.rs  auth.rs  domain_write_guard.rs  edges.rs  health.rs  meta.rs  mod.rs  nodes.rs  query.rs
apps/api/src/telemetry/: health.rs  mod.rs
apps/api/tests/: api_accounts.rs  api_accounts_create.rs  api_auth.rs  api_edges.rs  api_nodes.rs  api_nodes_dedup.rs  auth_handler_test.rs  auth_open_registration.rs  auth_ratelimit.rs  auth_ratelimit_proxy_trusted.rs  auth_ratelimit_proxy_untrusted.rs  auth_security_invariants.rs  db_domain_account_email_unique.rs  db_domain_account_write_path.rs  db_domain_backfill.rs  db_domain_edge_write_path.rs  db_domain_node_write_path.rs  db_domain_read_path.rs  db_domain_schema_migrations.rs  db_session_store_persistence.rs  helpers.rs  smoke_k6.js  sqlx_pgbouncer_session_crud.rs  sqlx_postgres_direct_session_crud.rs
architecture/: blueprint.docmeta-engine.md  docmeta.schema.md  overview.md  security.md
audit/: impl-registry.yaml
(+779 files in other folders)
