[package]
name = "weltgewebe-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"
authors = ["Weltgewebe Team"]
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
async-nats = "0.35"
dotenvy = "0.15"
prometheus = "0.14.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Used by `apps::api::config` to read YAML configuration defaults and files.
serde_yaml = "0.9"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3.45"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
